Fixed:Z-Index Header

--- a/Frontend/Styles/Header.css
+++ b/Frontend/Styles/Header.css
@@ -5,4 +5,5 @@
     position: sticky;
     top: 0;
     border-bottom: 2px solid #fd8429;
+    z-index: 1000;
 }
